--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -19,36 +19,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="87" id="8I2-F7-LKp" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="87"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="110" id="8I2-F7-LKp" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="110"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8I2-F7-LKp" id="Wnd-7r-FhQ">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="86.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="109.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="lTR-Gg-djE">
-                                            <rect key="frame" x="32" y="19" width="311" height="49"/>
+                                            <rect key="frame" x="32" y="19" width="311" height="72"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="X6S-hp-OeF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="311" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="311" height="23.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FmF-oZ-Aau">
-                                                            <rect key="frame" x="0.0" y="0.0" width="231" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FmF-oZ-Aau">
+                                                            <rect key="frame" x="0.0" y="0.0" width="231" height="23.5"/>
+                                                            <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w3z-4n-pD4">
-                                                            <rect key="frame" x="239" y="0.0" width="72" height="20.5"/>
+                                                            <rect key="frame" x="239" y="0.0" width="72" height="23.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgf-WQ-Msw">
-                                                    <rect key="frame" x="0.0" y="28.5" width="311" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Body Text" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgf-WQ-Msw">
+                                                    <rect key="frame" x="0.0" y="31.5" width="311" height="40.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -95,30 +95,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aGv-aU-9k0">
-                                <rect key="frame" x="16" y="124" width="343" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yyS-vq-vO1">
-                                <rect key="frame" x="16" y="162" width="343" height="214"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="EXt-OY-xxw">
+                                <rect key="frame" x="16" y="124" width="343" height="288"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="vS9-Vv-sQN">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="29"/>
+                                        <segments>
+                                            <segment title="☹️"/>
+                                            <segment title="😐"/>
+                                            <segment title="🙂"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aGv-aU-9k0">
+                                        <rect key="frame" x="0.0" y="36" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="yyS-vq-vO1">
+                                        <rect key="frame" x="0.0" y="74" width="343" height="214"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="214" id="hV0-L1-vCG"/>
+                                    <constraint firstAttribute="height" constant="288" id="oiV-q6-O9w"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="yyS-vq-vO1" firstAttribute="leading" secondItem="kr9-te-voY" secondAttribute="leading" constant="16" id="09T-rQ-AzA"/>
-                            <constraint firstItem="kr9-te-voY" firstAttribute="trailing" secondItem="aGv-aU-9k0" secondAttribute="trailing" constant="16" id="5UZ-xD-5vg"/>
-                            <constraint firstItem="aGv-aU-9k0" firstAttribute="top" secondItem="kr9-te-voY" secondAttribute="top" constant="8" id="V8G-vF-TsB"/>
-                            <constraint firstItem="yyS-vq-vO1" firstAttribute="top" secondItem="aGv-aU-9k0" secondAttribute="bottom" constant="8" id="bwc-By-hYR"/>
-                            <constraint firstItem="kr9-te-voY" firstAttribute="trailing" secondItem="yyS-vq-vO1" secondAttribute="trailing" constant="16" id="kkh-tL-XXv"/>
-                            <constraint firstItem="aGv-aU-9k0" firstAttribute="leading" secondItem="kr9-te-voY" secondAttribute="leading" constant="16" id="oTp-qe-1HW"/>
+                            <constraint firstItem="EXt-OY-xxw" firstAttribute="leading" secondItem="kr9-te-voY" secondAttribute="leading" constant="16" id="PIO-Jw-IrT"/>
+                            <constraint firstItem="EXt-OY-xxw" firstAttribute="top" secondItem="kr9-te-voY" secondAttribute="top" constant="8" id="e7n-fx-FT7"/>
+                            <constraint firstItem="kr9-te-voY" firstAttribute="trailing" secondItem="EXt-OY-xxw" secondAttribute="trailing" constant="16" id="yiw-fp-0TJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kr9-te-voY"/>
                     </view>
@@ -131,12 +141,13 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="yyS-vq-vO1" id="orf-qd-NIM"/>
+                        <outlet property="moodButton" destination="vS9-Vv-sQN" id="yt0-W2-CKW"/>
                         <outlet property="titleTextField" destination="aGv-aU-9k0" id="CC8-RX-7hJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VCh-Pd-2O7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1572" y="128.57142857142858"/>
+            <point key="canvasLocation" x="1572" y="128.18590704647679"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CAQ-po-9sf">
