--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -155,6 +155,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="JAz-Pc-r7J"/>
+        <segue reference="CrK-Ec-u3G"/>
     </inferredMetricsTieBreakers>
 </document>
