--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                     <navigationItem key="navigationItem" title="Title" id="naj-25-0V7">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="iRR-wF-hc2">
                             <connections>
-                                <action selector="save:" destination="zVy-GE-ibR" id="eVy-zD-Drc"/>
+                                <action selector="save:" destination="zVy-GE-ibR" id="Fci-eV-N0g"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -152,6 +152,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="pnZ-Ix-dNS"/>
+        <segue reference="lhL-m8-8Tg"/>
     </inferredMetricsTieBreakers>
 </document>
