--- a/Journal-CoreData/Journal-CoreData/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,19 +27,19 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="srP-GJ-LBY">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="73.5"/>
+                                            <rect key="frame" x="8" y="0.0" width="359" height="73.5"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="184" translatesAutoresizingMaskIntoConstraints="NO" id="yJG-TU-lRP">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="24"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="yJG-TU-lRP">
+                                                    <rect key="frame" x="0.0" y="0.0" width="359" height="24"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WGR-8z-dAy">
-                                                            <rect key="frame" x="0.0" y="0.0" width="110" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WGR-8z-dAy">
+                                                            <rect key="frame" x="0.0" y="0.0" width="40" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNe-9f-fr2">
-                                                            <rect key="frame" x="294" y="0.0" width="81" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="timestamp" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNe-9f-fr2">
+                                                            <rect key="frame" x="48" y="0.0" width="311" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -46,7 +47,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="body Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X2l-9a-9SQ">
-                                                    <rect key="frame" x="0.0" y="32" width="375" height="41.5"/>
+                                                    <rect key="frame" x="0.0" y="32" width="359" height="41.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -56,9 +57,9 @@
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="srP-GJ-LBY" secondAttribute="bottom" id="3Z7-ag-hsG"/>
-                                        <constraint firstAttribute="trailing" secondItem="srP-GJ-LBY" secondAttribute="trailing" id="Lmc-aY-ts6"/>
+                                        <constraint firstAttribute="trailing" secondItem="srP-GJ-LBY" secondAttribute="trailing" constant="8" id="Lmc-aY-ts6"/>
                                         <constraint firstItem="srP-GJ-LBY" firstAttribute="top" secondItem="Gnk-Ih-Nfb" secondAttribute="top" id="bRp-ZW-gjd"/>
-                                        <constraint firstItem="srP-GJ-LBY" firstAttribute="leading" secondItem="Gnk-Ih-Nfb" secondAttribute="leading" id="lVW-XU-L0j"/>
+                                        <constraint firstItem="srP-GJ-LBY" firstAttribute="leading" secondItem="Gnk-Ih-Nfb" secondAttribute="leading" constant="8" id="lVW-XU-L0j"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
