--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -104,12 +104,12 @@
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hkc-bC-BbU">
                                 <rect key="frame" x="20" y="174" width="335" height="473"/>
-                                <color key="backgroundColor" red="1" green="0.98011930634942734" blue="0.95216190672986811" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.81903038350000001" green="0.89943224899999996" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="oEk-xJ-w1b" firstAttribute="leading" secondItem="n3w-nT-0MY" secondAttribute="leading" constant="20" id="1Rl-fh-BX8"/>
                             <constraint firstItem="hkc-bC-BbU" firstAttribute="leading" secondItem="n3w-nT-0MY" secondAttribute="leading" constant="20" id="AoA-bf-QFS"/>
