implemented mood property to data model works correctly

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -30,11 +30,11 @@
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Yns-2D-3hC">
                                             <rect key="frame" x="16" y="11" width="343" height="58"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="141" translatesAutoresizingMaskIntoConstraints="NO" id="RKI-83-hh5">
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="RKI-83-hh5">
                                                     <rect key="frame" x="0.0" y="0.0" width="343" height="20.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="626-cP-Fea">
-                                                            <rect key="frame" x="0.0" y="0.0" width="139" height="20.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="272" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -142,7 +142,7 @@
                     <connections>
                         <outlet property="entryTextField" destination="oEk-xJ-w1b" id="tze-5K-IOl"/>
                         <outlet property="entryTextView" destination="hkc-bC-BbU" id="fxt-64-dmc"/>
-                        <outlet property="segmentedControl" destination="Bwc-5k-XIk" id="BnY-0h-973"/>
+                        <outlet property="moodControl" destination="Bwc-5k-XIk" id="WdW-oH-323"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PqZ-QO-iYM" userLabel="First Responder" sceneMemberID="firstResponder"/>
