--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -89,28 +89,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ocx-h4-DKY">
-                                <rect key="frame" x="8" y="72" width="359" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4ju-zE-7eh">
-                                <rect key="frame" x="8" y="110" width="359" height="357"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Bhw-0m-FaO">
+                                <rect key="frame" x="8" y="72" width="359" height="587"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ocx-h4-DKY">
+                                        <rect key="frame" x="0.0" y="0.0" width="359" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="iep-5o-x7N"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="2" translatesAutoresizingMaskIntoConstraints="NO" id="YrG-Ol-Xiz">
+                                        <rect key="frame" x="0.0" y="30" width="359" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="K0H-kZ-5l2"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="😃"/>
+                                            <segment title="😢"/>
+                                            <segment title="😐"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4ju-zE-7eh">
+                                        <rect key="frame" x="0.0" y="70" width="359" height="517"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="pHu-xY-hn0" firstAttribute="bottom" secondItem="4ju-zE-7eh" secondAttribute="bottom" constant="200" id="12k-iW-8ee"/>
-                            <constraint firstItem="Ocx-h4-DKY" firstAttribute="leading" secondItem="pHu-xY-hn0" secondAttribute="leading" constant="8" id="9Q0-Ns-qwo"/>
-                            <constraint firstItem="pHu-xY-hn0" firstAttribute="trailing" secondItem="4ju-zE-7eh" secondAttribute="trailing" constant="8" id="GIO-GK-NQN"/>
-                            <constraint firstItem="pHu-xY-hn0" firstAttribute="trailing" secondItem="Ocx-h4-DKY" secondAttribute="trailing" constant="8" id="VwW-b7-LgB"/>
-                            <constraint firstItem="Ocx-h4-DKY" firstAttribute="top" secondItem="pHu-xY-hn0" secondAttribute="top" constant="8" id="Wnc-R6-NZZ"/>
-                            <constraint firstItem="4ju-zE-7eh" firstAttribute="leading" secondItem="pHu-xY-hn0" secondAttribute="leading" constant="8" id="rPa-ah-c6D"/>
-                            <constraint firstItem="4ju-zE-7eh" firstAttribute="top" secondItem="Ocx-h4-DKY" secondAttribute="bottom" constant="8" id="yxr-Kd-LeU"/>
+                            <constraint firstItem="pHu-xY-hn0" firstAttribute="bottom" secondItem="Bhw-0m-FaO" secondAttribute="bottom" constant="8" id="NlK-yy-SDt"/>
+                            <constraint firstItem="Bhw-0m-FaO" firstAttribute="top" secondItem="pHu-xY-hn0" secondAttribute="top" constant="8" id="Rbo-Of-A2o"/>
+                            <constraint firstItem="pHu-xY-hn0" firstAttribute="trailing" secondItem="Bhw-0m-FaO" secondAttribute="trailing" constant="8" id="WFy-F8-pIU"/>
+                            <constraint firstItem="Bhw-0m-FaO" firstAttribute="leading" secondItem="pHu-xY-hn0" secondAttribute="leading" constant="8" id="lji-s2-s9q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="pHu-xY-hn0"/>
                     </view>
@@ -122,6 +138,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="segmentedControl" destination="YrG-Ol-Xiz" id="nO2-9x-YV7"/>
                         <outlet property="textField" destination="Ocx-h4-DKY" id="b0j-I3-HkI"/>
                         <outlet property="textView" destination="4ju-zE-7eh" id="ljm-cu-gyF"/>
                     </connections>
